[package]
name = "toytorrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.4.7", features = ["derive"] }
nom = "7.1.3"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
sha1 = "0.10.6"
tide = "0.16.0"
