[package]
name = "toytorrent-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.4.7", features = ["derive"] }
rand = "0.8.5"
tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }

toytorrent-common = { path = "../common" }
